src/objects/Shop_Product__c.object
<CustomObject>
    <description>Object for the Product Catalog project</description>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Shop Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Inventory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>